force-app/main/default/objects/Activity/fields/Is_Download_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Download_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for checking whether the download is avaliable or not in the software details page</description>
    <label>Is Download Available</label>
    <type>Checkbox</type>
</CustomField>