force-app/main/default/objects/Activity/fields/Lang_code__c.field-meta.xml
<CustomField>
    <fullName>Lang_code__c</fullName>
    <defaultValue>&quot;EN&quot;</defaultValue>
    <description>This is used to store the language code of a record to differentiate the translations based on logged in user.</description>
    <label>Lang code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>