force-app/main/default/objects/Activity/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <description>Migration ID from Global OneSMS</description>
    <label>Migration Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>